drawer displaying coordinates correctly

--- a/src/app/components/world-map/world-map.component.scss
+++ b/src/app/components/world-map/world-map.component.scss
@@ -14,3 +14,10 @@
   width: 16rem;
   text-align: center;
 }
+
+.map-buttons {
+  position: absolute;
+  bottom: 10rem;
+  right: 0.6rem;
+  z-index: 100;
+}
