added prettier formatter to auto format all files to new standard

--- a/src/app/components/map-drawer/map-drawer.component.html
+++ b/src/app/components/map-drawer/map-drawer.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let marker of mappedMarkers">
-  <h3>{{ marker.lat + ',' + marker.lng }}</h3>
+<div *ngFor="let location of selectedLocations">
+  <h3>{{ location.place_name }}</h3>
 </div>
