--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,15 @@ $holiday-map-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$holiday-map-theme: mat.define-light-theme((
-  color: (
-    primary: $holiday-map-primary,
-    accent: $holiday-map-accent,
-    warn: $holiday-map-warn,
+$holiday-map-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $holiday-map-primary,
+      accent: $holiday-map-accent,
+      warn: $holiday-map-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,10 +36,17 @@ $holiday-map-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
-.mapboxgl-ctrl-geocoder, .mapboxgl-ctrl-geocoder {
+.mapboxgl-ctrl-geocoder,
+.mapboxgl-ctrl-geocoder {
   width: 15rem;
 }
 
