--- a/src/app/components/map-overlay/map-overlay.component.html
+++ b/src/app/components/map-overlay/map-overlay.component.html
@@ -1,1 +1,4 @@
 <ng-template appMapOverlay></ng-template>
+<button mat-raised-button color="warn" id="close-btn" (click)="closeOverlay()">
+  Close
+</button>
