map drawer comes out from bottom of screen now

--- a/src/app/components/world-map/world-map.component.html
+++ b/src/app/components/world-map/world-map.component.html
@@ -4,6 +4,7 @@
     mode="over"
     [disableClose]="true"
     fixedInViewPort="true"
+    position="start"
     [opened]="isOverlayOpen$ | async"
   >
     <ng-template appMapOverlay></ng-template>
