updating overlay stylings, altered shared map service to send a string instead of an array

--- a/src/app/components/map-overlay/map-overlay.component.html
+++ b/src/app/components/map-overlay/map-overlay.component.html
@@ -1,4 +1,6 @@
-<ng-template appMapOverlay></ng-template>
-<button mat-raised-button color="warn" id="close-btn" (click)="closeOverlay()">
-  Close
-</button>
+<div class="overlay-container">
+  <ng-template appMapOverlay></ng-template>
+  <button mat-raised-button color="accent" id="close-btn" (click)="closeOverlay()">
+    Close
+  </button>
+</div>
