--- a/src/app/components/marker-popup/marker-popup.component.html
+++ b/src/app/components/marker-popup/marker-popup.component.html
@@ -5,7 +5,7 @@
     *ngIf="placeMarkerConfirmationPopup; else overlayButton"
     class="popup-action-btn"
     mat-raised-button
-    color="primary"
+    color="accent"
     (click)="onPlaceMarker()"
   >
     Place
@@ -16,7 +16,7 @@
   <button
     class="popup-action-btn"
     mat-raised-button
-    color="primary"
+    color="accent"
     (click)="openOverlay()"
   >
     View
