--- a/src/app/components/map-drawer/map-drawer.component.html
+++ b/src/app/components/map-drawer/map-drawer.component.html
@@ -1,3 +1,21 @@
-<div *ngFor="let location of selectedLocations">
-  <h3>{{ location }}</h3>
+<div class="drawer-container">
+  <div>
+    <h3 id="location-title">{{ selectedLocation }}</h3>
+  </div>
+  <div>
+    <h3 id="location-description">{{ selectedLocation }}</h3>
+    <mat-form-field appearance="fill">
+      <textarea
+        matInput
+        mat-autosize
+        maxlength="300"
+        matInput
+        cdkTextareaAutosize
+        #autosize="cdkTextareaAutosize"
+        cdkAutosizeMinRows="1"
+        cdkAutosizeMaxRows="5"
+        placeholder="What did you do?"
+      ></textarea>
+    </mat-form-field>
+  </div>
 </div>
