--- a/src/app/components/world-map/world-map.component.scss
+++ b/src/app/components/world-map/world-map.component.scss
@@ -15,13 +15,6 @@
   text-align: center;
 }
 
-.map-buttons {
-  position: absolute;
-  bottom: 10rem;
-  right: 0.6rem;
-  z-index: 100;
-}
-
 :host ::ng-deep {
   .mat-drawer.map-drawer {
     transform: translate3d(0, 100%, 0);
@@ -49,5 +42,9 @@
     position: relative;
     top: -105%;
     left: 95%;
+  }
+
+  .mat-drawer-inner-container {
+    background-color: antiquewhite;
   }
 }
