--- a/src/app/components/map-drawer/map-drawer.component.scss
+++ b/src/app/components/map-drawer/map-drawer.component.scss
@@ -3,7 +3,23 @@
   display: grid;
   grid-template-columns: 2fr 2fr;
   gap: 3rem;
-  border-top: 4px solid red;
+  border-top: 6px solid red;
+
+  &__description-block {
+    display: flex;
+    align-items: center;
+    height: 90%;
+    flex-direction: column;
+    margin-top: 2rem;
+    gap: 1rem;
+  }
+
+  &__title-block {
+    display: flex;
+    align-items: flex-start;
+    height: 100%;
+    justify-content: center;
+  }
 }
 
 :host ::ng-deep {
@@ -22,4 +38,11 @@
   #mat-input-0 {
     height: 10rem;
   }
+}
+
+#location-title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.4
 }
