--- a/src/app/components/world-map/world-map.component.html
+++ b/src/app/components/world-map/world-map.component.html
@@ -14,7 +14,7 @@
       <button
         mat-raised-button
         color="accent"
-        *ngIf="markers.length > 0"
+        *ngIf="storyMarkers.length > 0"
         class="remove-marker"
         (click)="removeAllMarkers()"
       >
