--- a/src/app/components/map-drawer/map-drawer.component.scss
+++ b/src/app/components/map-drawer/map-drawer.component.scss
@@ -3,22 +3,21 @@
   display: grid;
   grid-template-columns: 2fr 2fr;
   gap: 3rem;
-  border-top: 6px solid red;
 
   &__description-block {
     display: flex;
     align-items: center;
     height: 90%;
     flex-direction: column;
-    margin-top: 2rem;
     gap: 1rem;
   }
 
   &__title-block {
+    gap: 2rem;
     display: flex;
-    align-items: flex-start;
-    height: 100%;
-    justify-content: center;
+    align-items: center;
+    height: 90%;
+    flex-direction: column;
   }
 }
 
@@ -38,17 +37,47 @@
   #mat-input-0 {
     height: 10rem;
   }
+
+  .mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
+    display: flex;
+    align-items: center;
+  }
 }
 
 #location-title {
   text-align: center;
   font-size: 1.5rem;
   font-weight: 700;
-  line-height: 1.4
+  line-height: 1.4;
+  border-top: 6px solid red;
 }
 
 #story {
   font-size: 1rem;
   line-height: 1.4;
   font-weight: 700;
+}
+
+#textarea {
+  max-height: 120px;
+  height: 120px;
+}
+
+#add-photo-btn {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 15px;
+  height: 180px;
+  width: 400px;
+  overflow: visible;
+  border-radius: 1rem;
+}
+
+#photo-icon {
+  font-size: 150px;
+  height: 140px;
+  width: 170px;
 }
