style updates, popup closes on drawer open

--- a/src/app/components/map-drawer/map-drawer.component.html
+++ b/src/app/components/map-drawer/map-drawer.component.html
@@ -12,7 +12,7 @@
     </button>
 
     <mat-form-field>
-      <mat-label>Enter a date range</mat-label>
+      <mat-label>When were you in this location?</mat-label>
       <mat-date-range-input [rangePicker]="picker">
         <input
           matStartDate
@@ -25,7 +25,7 @@
           placeholder="End date"
         />
       </mat-date-range-input>
-      <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+      <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
       <mat-datepicker-toggle
         matIconSuffix
         [for]="picker"
