--- a/src/app/components/marker-popup/marker-popup.component.scss
+++ b/src/app/components/marker-popup/marker-popup.component.scss
@@ -1,3 +1,4 @@
+
 .popup-container {
   display: flex;
   align-items: center;
@@ -6,15 +7,13 @@
   height: 100%;
 }
 
-#location {
+.location {
   width: 60%;
   text-align: center;
   font-size: 0.75rem;
 }
 
-.popup-action-btn {
+#popup-action-btn {
   text-align: center;
   font-size: 0.75rem;
 }
-
-
