--- a/src/app/components/map-drawer/map-drawer.component.scss
+++ b/src/app/components/map-drawer/map-drawer.component.scss
@@ -4,15 +4,7 @@
   grid-template-columns: 2fr 2fr;
   gap: 3rem;
 
-  &__description-block {
-    display: flex;
-    align-items: center;
-    height: 80%;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  &__title-block {
+  &__block {
     gap: 2rem;
     display: flex;
     align-items: center;
@@ -42,6 +34,10 @@
     display: flex;
     align-items: center;
   }
+
+  #story-field .mat-mdc-text-field-wrapper {
+    height: 10rem;
+  }
 }
 
 #location-title {
@@ -54,13 +50,21 @@
 
 #story {
   font-size: 1rem;
+  line-height: 1.6;
+  font-weight: 700;
+  width: 75%;
+}
+
+#date {
+  margin-block-start: 1rem;
   line-height: 1.4;
   font-weight: 700;
 }
 
 #textarea {
-  max-height: 120px;
-  height: 120px;
+  max-height: 7.5rem;
+  height: 7.5rem;
+  font-size: 0.8rem;
 }
 
 #add-photo-btn {
@@ -69,15 +73,15 @@
   gap: 1rem;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 15px;
-  height: 180px;
-  width: 400px;
+  font-size: 1rem;
+  height: 10.25rem;
+  width: 25rem;
   overflow: visible;
   border-radius: 1rem;
 }
 
 #photo-icon {
-  font-size: 150px;
-  height: 140px;
-  width: 170px;
+  font-size: 8.5rem;
+  height: 9rem;
+  width: 10.5rem;
 }
