--- a/src/app/components/marker-popup/marker-popup.component.html
+++ b/src/app/components/marker-popup/marker-popup.component.html
@@ -15,16 +15,28 @@
 </div>
 
 <ng-template #viewBlock>
-  <div class="popup-container">
-    <h3 class="location">{{ location }}</h3>
-
-    <button
-      id="popup-action-btn"
-      mat-raised-button
-      color="accent"
-      (click)="openOverlay()"
-    >
-      View
-    </button>
-  </div>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ location }}</mat-card-title>
+      <mat-card-subtitle *ngIf="dateMessage">{{
+        dateMessage
+      }}</mat-card-subtitle>
+    </mat-card-header>
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      alt="Photo"
+    />
+    <mat-card-content *ngIf="selectedStoryMarker.story">
+      <p>
+        {{ selectedStoryMarker.story }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="accent" (click)="openOverlay()">
+        View
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </ng-template>
