passing all markers to the drawer component to track all user entered dates, currently we can display all dates within the start and end range in string form in the console

--- a/src/app/components/map-drawer/map-drawer.component.html
+++ b/src/app/components/map-drawer/map-drawer.component.html
@@ -58,8 +58,8 @@
 
 <ng-template #viewBlock>
   <div class="drawer-container__block">
-    <h2 id="date">{{ storyMarker.startDate + ' - ' + storyMarker.endDate }}</h2>
-    <p id="story">{{ storyMarker.story }}</p>
+    <h2 id="date">{{ selectedStoryMarker.startDate + ' - ' + selectedStoryMarker.endDate }}</h2>
+    <p id="story">{{ selectedStoryMarker.story }}</p>
   </div>
 
   <div class="drawer-container__block">
