--- a/src/app/components/world-map/world-map.component.scss
+++ b/src/app/components/world-map/world-map.component.scss
@@ -27,11 +27,8 @@
   }
   
   .mapboxgl-popup-content {
-    padding: 0;
-    border-radius: 50%;
+    border-radius: 10%;
     border: 5px solid black;
-    width: 12rem;
-    height: 12rem;
     background-color: antiquewhite;
   }
 
@@ -40,9 +37,8 @@
     font-size: 2rem;
     height: 2rem;
     width: 2rem;
-    position: relative;
-    top: -105%;
-    left: 95%;
+    position: absolute;
+    left: 105%;
   }
 
   .mat-drawer-inner-container {
