added new menu button on map, new button opens new overlay, current code has been refactored to incorporate, implementation needs rethinking, likely will need two different components

--- a/src/app/components/world-map/world-map.component.html
+++ b/src/app/components/world-map/world-map.component.html
@@ -12,6 +12,14 @@
   <mat-drawer-content>
     <div id="map">
       <button
+        mat-icon-button
+        color="accent"
+        id="menu-btn"
+        (click)="openOverlay()"
+      >
+        <mat-icon id="menu-icon">menu</mat-icon>
+      </button>
+      <button
         mat-raised-button
         color="accent"
         *ngIf="storyMarkers.length > 0"
