story markers now have a location property that is assigned on initialization of the marker

--- a/src/app/components/menu-overlay/menu-overlay.component.html
+++ b/src/app/components/menu-overlay/menu-overlay.component.html
@@ -1,1 +1,7 @@
-<p>menu-overlay works!</p>
+<div class="menu-container">
+  <ng-container *ngFor="let storyMarker of storyMarkers">
+    <mat-card>
+      
+    </mat-card>
+  </ng-container>
+</div>
