menu overlay displays selected markers, bug found with clear markers button and styling of map drawer

--- a/src/app/components/menu-overlay/menu-overlay.component.html
+++ b/src/app/components/menu-overlay/menu-overlay.component.html
@@ -1,7 +1,7 @@
 <div class="menu-container">
   <ng-container *ngFor="let storyMarker of storyMarkers">
     <mat-card>
-      
+      <mat-card-title>{{ storyMarker.location }}</mat-card-title>
     </mat-card>
   </ng-container>
 </div>
